# mc-fish-pye

./: README.md  config.json  pyproject.toml  setup.py
mc_fish_pye/: main.py  roi_setup.py
resource-pack/: pack.mcmeta
resource-pack/assets/minecraft/lang/: en_db.json
scripts/: setup_roi.py
